--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <section id="block-7" class="block-7">
         <div class="container">
             <div class="c-header">
-                <h2>あなたの『適正』は、どれか？</h2>
+                <h2>あなたの『適正』は、<br class="br-sp">どれか？</h2>
                 <p>診断後に、詳細ロードマップと<br class="br-sp">協働AIが提示されます。</p>
             </div>
         </div>
