--- a/index.html
+++ b/index.html
@@ -485,28 +485,28 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>平均年収</td>
-                            <td>480万円</td>
-                            <td>680万円</td>
-                            <td class="diff-positive">+200万円</td>
+      <td data-label="項目">平均年収</td>
+      <td data-label="一般企業員">480万円</td>
+      <td data-label="技術者"><span style="color:red;font-weight:600;">680万円</span></td>
+      <td data-label="差" class="diff-positive">+200万円</td>
                         </tr>
                         <tr>
-                            <td>安定性</td>
-                            <td>中（リストラリスク）</td>
-                            <td>高（スキル型）</td>
-                            <td class="diff-positive">◯</td>
+      <td data-label="項目">安定性</td>
+      <td data-label="一般企業員">中（リストラリスク）</td>
+      <td data-label="技術者"><span style="color:red;font-weight:600;">高（スキル型）</span></td>
+      <td data-label="差" class="diff-positive">◯</td>
                         </tr>
                         <tr>
-                            <td>転職可能性</td>
-                            <td>低</td>
-                            <td>高</td>
-                            <td class="diff-positive">◯</td>
+      <td data-label="項目">転職可能性</td>
+      <td data-label="一般企業員">低</td>
+      <td data-label="技術者"><span style="color:red;font-weight:600;">高</span></td>
+      <td data-label="差" class="diff-positive">◯</td>
                         </tr>
                         <tr>
-                            <td>年金上乗せ</td>
-                            <td>なし</td>
-                            <td>あり（企業多）</td>
-                            <td class="diff-positive">◯</td>
+      <td data-label="項目">年金上乗せ</td>
+      <td data-label="一般企業員">なし</td>
+      <td data-label="技術者"><span style="color:red;font-weight:600;">あり（企業多）</span></td>
+      <td data-label="差" class="diff-positive">◯</td>
                         </tr>
                     </tbody>
                 </table>
