--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <section class="block-4 section">
         <div class="container">
             <div class="cta-container">
-                <button class="cta-button" onclick="location.href='#diagnosis'">10分で未来を決める ─ 無料診断へ</button>
+                <button class="cta-button" onclick="location.href='diagnosis.html'">10分で未来を決める ─ 無料診断へ</button>
                 <p class="cta-note">※診断完全無料 / ※個人情報は厳守</p>
             </div>
         </div>
@@ -652,7 +652,7 @@
             </div>
 
 <div class="cta-container">
-                <button class="cta-button" onclick="location.href='#diagnosis'">10分で未来を決める ─ 無料診断へ</button>
+                <button class="cta-button" onclick="location.href='diagnosis.html'">10分で未来を決める ─ 無料診断へ</button>
                 <p class="cta-note">※診断完全無料 / ※個人情報厳守 / ※結果は即座に表示</p>
 </div>
 
@@ -674,7 +674,7 @@
                 </ul>
                 <div class="logo">Japan Maker</div>
                 <p class="tagline">日本の『手』を、世界の『価値』に。</p>
-                <a href="#about" class="link">詳しく知る</a>
+                <a href="company.html" class="link" target="_blank">詳しく知る</a>
             </div>
         </div>
     </section>
@@ -683,10 +683,10 @@
     <footer>
         <div class="footer-content">
             <div class="footer-links">
-                <a href="#privacy">プライバシーポリシー</a>
-                <a href="#terms">利用規約</a>
-                <a href="#contact">お問い合わせ</a>
-                <a href="#company">企業情報</a>
+                <a href="privacy.html" target="_blank">プライバシーポリシー</a>
+                <a href="terms.html" target="_blank">利用規約</a>
+                <a href="contact.html" target="_blank">お問い合わせ</a>
+                <a href="company.html" target="_blank">企業情報</a>
             </div>
             <p class="footer-copyright">© 2025 Japan Maker. All rights reserved.</p>
         </div>
