--- a/company.html
+++ b/company.html
@@ -92,20 +92,21 @@
 <main class="container">
 
 <header class="c-header container">
-  <h1>企業情報</h1>
+  <h1>組織情報</h1>
   <!--p>基本情報と拠点・連絡先をご案内します。</p-->
 </header>
 
-  <!-- 会社概要 -->
+  <!-- 概要 -->
   <section class="card" aria-labelledby="about-title">
-    <h2 id="about-title" class="section-title">会社概要</h2>
+    <h2 id="about-title" class="section-title">概要</h2>
     <div class="kv">
-      <div class="row"><dt>会社名</dt><dd>BRIDGEHEARTS PARTNER - FZCO</dd></div>
-      <div class="row"><dt>所在地</dt><dd>DSO-IFZA Dubai Silicon Oasis Dubai - UAE 171456</dd></div>
-      <div class="row"><dt>代表者</dt><dd>CHOI YOUNGBEOM</dd></div>
-      <div class="row"><dt>設立</dt><dd>2021年5月</dd></div>
+      <div class="row"><dt>法人名</dt><dd>一般社団法人Tribe Japan</dd></div>
+      <div class="row"><dt>所在地</dt><dd>東京都多摩市中沢2丁目3番地1<br>
+ライオンズマンション多摩センター302号</dd></div>
+      <div class="row"><dt>代表者</dt><dd>北澤 英理子</dd></div>
+      <div class="row"><dt>設立</dt><dd>2025年12月</dd></div>
       <!--div class="row"><dt>資本金</dt><dd>○○</dd></div-->
-      <div class="row"><dt>事業内容</dt><dd>適性診断サービスの企画・開発・運営／研修・教育プログラムの提供／関連システムの受託開発 等</dd></div>
+      <!--div class="row"><dt>事業内容</dt><dd>適性診断サービスの企画・開発・運営／研修・教育プログラムの提供／関連システムの受託開発 等</dd></div-->
       <!--div class="row"><dt>適格請求書</dt><dd>登録番号：T367102567890123</dd></div-->
     </div>
   </section>
@@ -150,16 +151,16 @@
   <section class="card">
     <h2 class="section-title">沿革</h2>
     <ul>
-      <li>2021年5月　BRIDGEHEARTS PARTNER - FZCO設立</li>
-      <li>2025年11月　診断サービスβ版を公開</li>
-      <li>2025年12月　多摩センター拠点・オンラインのハイブリッド提供を開始</li>
+      <li>2025年12月　一般社団法人Tribe Japan 設立</li>
+      <li>2025年12月　診断サービスβ版を公開</li>
+      <li>2025年*月　多摩センター拠点・オンラインのハイブリッド提供を開始</li>
     </ul>
   </section>
 
   <!-- お問い合わせ -->
   <section class="card contact" aria-labelledby="contact-title">
     <h2 id="contact-title" class="section-title">お問い合わせ</h2>
-    <p>メール：<a href="mailto:info@japan-maker.com">info[アットマーク]japan-maker.com</a></p>
+    <p>メール：<a href="mailto:info@japan-maker.com">info[アットマーク]tribejapan.org</a></p>
     <p>受付時間：平日 10:00–18:00（年末年始・当社指定日を除く）</p>
     <!--div class="back"><a href="#top">ページ先頭へ戻る</a></div-->
   </section>
