--- a/company.html
+++ b/company.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>企業情報 | Japan Maker</title>
+<title>組織情報 | Japan Maker</title>
 <meta name="format-detection" content="telephone=no">
 <style>
   :root{
@@ -100,7 +100,7 @@
   <section class="card" aria-labelledby="about-title">
     <h2 id="about-title" class="section-title">概要</h2>
     <div class="kv">
-      <div class="row"><dt>法人名</dt><dd>一般社団法人Tribe Japan</dd></div>
+      <div class="row"><dt>法人名</dt><dd><!--一般社団法人Tribe Japan--></dd></div>
       <div class="row"><dt>所在地</dt><dd>東京都多摩市中沢2丁目3番地1<br>
 ライオンズマンション多摩センター302号</dd></div>
       <div class="row"><dt>代表者</dt><dd>北澤 英理子</dd></div>
@@ -151,7 +151,7 @@
   <section class="card">
     <h2 class="section-title">沿革</h2>
     <ul>
-      <li>2025年12月　一般社団法人Tribe Japan 設立</li>
+      <li>2025年12月　<!--一般社団法人Tribe Japan -->設立</li>
       <li>2025年12月　診断サービスβ版を公開</li>
       <li>2025年*月　多摩センター拠点・オンラインのハイブリッド提供を開始</li>
     </ul>
@@ -160,7 +160,7 @@
   <!-- お問い合わせ -->
   <section class="card contact" aria-labelledby="contact-title">
     <h2 id="contact-title" class="section-title">お問い合わせ</h2>
-    <p>メール：<a href="mailto:info@japan-maker.com">info[アットマーク]tribejapan.org</a></p>
+    <p>メール：<a href="mailto:info@japan-maker.com">info[アットマーク]<!--tribejapan.org--></a></p>
     <p>受付時間：平日 10:00–18:00（年末年始・当社指定日を除く）</p>
     <!--div class="back"><a href="#top">ページ先頭へ戻る</a></div-->
   </section>
